Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,77 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@Article{Begun:92,
+   Author="Begun, D. J.  and Aquadro, C. F. ",
+   Title="{{L}evels of naturally occurring {D}{N}{A} polymorphism correlate with recombination rates in {\it {D}. melanogaster}}",
+   Journal="Nature",
+   Year="1992",
+   Volume="356",
+   Pages="519--520",
+   OPTMonth="Apr"
+}
+
+@Article{Aguade:89,
+   Author="Aguad\'{e}, M.  and Miyashita, N.  and Langley, C. H. ",
+   Title="{{R}educed variation in the yellow-achaete-scute region in natural populations of {\it {D}rosophila melanogaster}}",
+   Journal="Genetics",
+   Year="1989",
+   Volume="122",
+   Pages="607--615",
+   OPTMonth="Jul"
+}
+
+@Article{Berry:91,
+   Author="Berry, A. J.  and Ajioka, J. W.  and Kreitman, M. ",
+   Title="{{L}ack of polymorphism on the {\it {D}rosophila} fourth chromosome resulting from selection}",
+   Journal="Genetics",
+   Year="1991",
+   Volume="129",
+   Pages="1111--1117",
+   OPTMonth="Dec"
+}
+
+@Article{Cutter:10,
+   Author="Cutter, A. D.  and Choi, J. Y. ",
+   Title="{{N}atural selection shapes nucleotide polymorphism across the genome of the nematode {\it {C}aenorhabditis briggsae}}",
+   Journal="Genome Res.",
+   Year="2010",
+   Volume="20",
+   Pages="1103--1111",
+   OPTMonth="Aug"
+}
+
+@Article{Cutter:03,
+   Author="Cutter, A. D.  and Payseur, B. A. ",
+   Title="{{S}election at linked sites in the partial selfer {\it {C}aenorhabditis elegans}}",
+   Journal="Mol. Biol. Evol.",
+   Year="2003",
+   Volume="20",
+   Pages="665--673",
+   OPTMonth="May"
+}
+
+@Article{Cutter:11,
+   Author="Cutter, A. D.  and Moses, A. M. ",
+   Title="{{P}olymorphism, divergence, and the role of recombination in {\it {S}accharomyces cerevisiae} genome evolution}",
+   Journal="Mol. Biol. Evol.",
+   Year="2011",
+   Volume="28",
+   Pages="1745--1754",
+   OPTMonth="May"
+}
+
+@Article{Barton:00,
+   Author="Barton, N. H. ",
+   Title="{{G}enetic hitchhiking}",
+   Journal="Philos. Trans. R. Soc. Lond., B, Biol. Sci.",
+   Year="2000",
+   Volume="355",
+   Pages="1553--1562",
+   OPTMonth="Nov"
+}
+
+
 @article{hohenlohe2010population,
   title={Population genomics of parallel adaptation in threespine stickleback using sequenced RAD tags},
   author={Hohenlohe, Paul A and Bassham, Susan and Etter, Paul D and Stiffler, Nicholas and Johnson, Eric A and Cresko, William A},
