Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -497,6 +497,20 @@
   publisher={Nature Publishing Group}
 }
 
+@Article{MaynardSmith:74,
+  author = 	 {Maynard Smith, J. and Haigh, J.},
+  title = 	 {The hitch-hiking effect of a favourable gene},
+  journal = 	 {Genet. Res.},
+  year = 	 {1974},
+  OPTkey = 	 {},
+  volume = 	 {23},
+  OPTnumber = 	 {},
+  pages = 	 {23--35},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 @article{smith1964kin,
   title={Group selection and kin selection},
   author={{Maynard Smith}, J},
