Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -486,6 +486,16 @@
   OPTannote = 	 {}
 }
 
+@Article{Kim:06,
+   Author="Kim, Y. ",
+   Title="{{A}llele frequency distribution under recurrent selective sweeps}",
+   Journal="Genetics",
+   Year="2006",
+   Volume="172",
+   Pages="1967--1978",
+   OPTMonth="Mar"
+}
+
 @article{marciniak2017,
   title={Harnessing ancient genomes to study the history of human adaptation},
   author={Marciniak, Stephanie and Perry, George H},
