added to linked selection

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,49 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@Article{Macpherson:07,
+   Author="Macpherson, J. M.  and Sella, G.  and Davis, J. C.  and Petrov, D. A. ",
+   Title="{{G}enomewide spatial correspondence between nonsynonymous divergence and neutral polymorphism reveals extensive adaptation in {\it {D}rosophila}}",
+   Journal="Genetics",
+   Year="2007",
+   Volume="177",
+   Pages="2083--2099",
+   OPTMonth="Dec"
+}
+
+
+@Article{Sattath:11,
+   Author="Sattath, S.  and Elyashiv, E.  and Kolodny, O.  and Rinott, Y.  and Sella, G. ",
+   Title="{{P}ervasive adaptive protein evolution apparent in diversity patterns around amino acid substitutions in {\it {D}rosophila simulans}}",
+   Journal="PLoS Genet.",
+   Year="2011",
+   Volume="7",
+   Pages="e1001302"
+}
+
+
+@Article{Andolfatto:01,
+   Author="Andolfatto, P.  and Przeworski, M. ",
+   Title="{{R}egions of lower crossing over harbor more rare variants in {A}frican populations of {\it {D}rosophila melanogaster}}",
+   Journal="Genetics",
+   Year="2001",
+   Volume="158",
+   Pages="657--665",
+   OPTMonth="Jun"
+}
+
+
+@Article{Andolfatto:07,
+   Author="Andolfatto, P. ",
+   Title="{{H}itchhiking effects of recurrent beneficial amino acid substitutions in the {\it {D}rosophila melanogaster} genome}",
+   Journal="Genome Res.",
+   Year="2007",
+   Volume="17",
+   Pages="1755--1762",
+   OPTMonth="Dec"
+}
+
+
 @Article{Begun:92,
    Author="Begun, D. J.  and Aquadro, C. F. ",
    Title="{{L}evels of naturally occurring {D}{N}{A} polymorphism correlate with recombination rates in {\it {D}. melanogaster}}",
@@ -131,6 +174,17 @@
   pages={1--6},
   year={1987},
   publisher={Springer}
+}
+
+@article{beissinger2016recent,
+  title={Recent demography drives changes in linked selection across the maize genome},
+  author={Beissinger, Timothy M and Wang, Li and Crosby, Kate and Durvasula, Arun and Hufford, Matthew B and Ross-Ibarra, Jeffrey},
+  journal={Nature plants},
+  volume={2},
+  number={7},
+  pages={16084},
+  year={2016},
+  publisher={Nature Publishing Group}
 }
 
 @article{nash2005selection,
@@ -839,6 +893,49 @@
   year={1923},
   publisher={Royal Society of Edinburgh Scotland Foundation}
 }
+
+@article{sattath2011pervasive,
+  title={Pervasive adaptive protein evolution apparent in diversity patterns around amino acid substitutions in Drosophila simulans},
+  author={Sattath, Shmuel and Elyashiv, Eyal and Kolodny, Oren and Rinott, Yosef and Sella, Guy},
+  journal={PLoS genetics},
+  volume={7},
+  number={2},
+  pages={e1001302},
+  year={2011},
+  publisher={Public Library of Science}
+}
+
+@article{elyashiv2016genomic,
+  title={A genomic map of the effects of linked selection in Drosophila},
+  author={Elyashiv, Eyal and Sattath, Shmuel and Hu, Tina T and Strutsovsky, Alon and McVicker, Graham and Andolfatto, Peter and Coop, Graham and Sella, Guy},
+  journal={PLoS genetics},
+  volume={12},
+  number={8},
+  pages={e1006130},
+  year={2016},
+  publisher={Public Library of Science}
+}
+
+@article{wiehe1993analysis,
+  title={Analysis of a genetic hitchhiking model, and its application to DNA polymorphism data from Drosophila melanogaster.},
+  author={Wiehe, TH and Stephan, Wolfgang},
+  journal={Molecular Biology and Evolution},
+  volume={10},
+  number={4},
+  pages={842--854},
+  year={1993}
+}
+
+@Article{Mcvicker:09,
+   Author="McVicker, G.  and Gordon, D.  and Davis, C.  and Green, P. ",
+   Title="{{W}idespread genomic signatures of natural selection in hominid evolution}",
+   Journal="PLoS Genet.",
+   Year="2009",
+   Volume="5",
+   Pages="e1000471",
+   OPTMonth="May"
+}
+
 
 @inproceedings{haldane1927mathematical,
   title={A mathematical theory of natural and artificial selection, part V: selection and mutation},
