--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{ptak2004absence,
+  title={Absence of the TAP2 human recombination hotspot in chimpanzees},
+  author={Ptak, Susan E and Roeder, Amy D and Stephens, Matthew and Gilad, Yoav and P{\"a}{\"a}bo, Svante and Przeworski, Molly},
+  journal={PLoS biology},
+  volume={2},
+  number={6},
+  pages={e155},
+  year={2004},
+  publisher={Public Library of Science}
+}
+
 @Article{Macpherson:07,
    Author="Macpherson, J. M.  and Sella, G.  and Davis, J. C.  and Petrov, D. A. ",
    Title="{{G}enomewide spatial correspondence between nonsynonymous divergence and neutral polymorphism reveals extensive adaptation in {\it {D}rosophila}}",
