added Pickrell code

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+@article{robinson2016revisiting,
+  title={Revisiting a Classic Study of the Molecular Clock},
+  author={Robinson, Lauren M and Boland, Joseph R and Braverman, John M},
+  journal={Journal of molecular evolution},
+  volume={82},
+  number={2-3},
+  pages={110--116},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{frentiu2007adaptive,
+  title={Adaptive evolution of color vision as seen through the eyes of butterflies},
+  author={Frentiu, Francesca D and Bernard, Gary D and Cuevas, Cristina I and Sison-Mangus, Marilou P and Prudic, Kathleen L and Briscoe, Adriana D},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={104},
+  number={suppl 1},
+  pages={8634--8640},
+  year={2007},
+  publisher={National Acad Sciences}
+}
+
 @article{wright2015adaptation,
   title={Adaptation to heavy-metal contaminated environments proceeds via selection on pre-existing genetic variation},
   author={Wright, Kevin M and Hellsten, Uffe and Xu, Chenling and Jeong, Annie L and Sreedasyam, Avinash and Chapman, Jarrod A and Schmutz, Jeremy and Coop, Graham and Rokhsar, Daniel S and Willis, John H},
