--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,17 @@
   publisher={Springer}
 }
 
+@article{lewontin1970units,
+  title={The units of selection},
+  author={Lewontin, Richard C},
+  journal={Annual review of ecology and systematics},
+  volume={1},
+  number={1},
+  pages={1--18},
+  year={1970},
+  publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+
 @article{frentiu2007adaptive,
   title={Adaptive evolution of color vision as seen through the eyes of butterflies},
   author={Frentiu, Francesca D and Bernard, Gary D and Cuevas, Cristina I and Sison-Mangus, Marilou P and Prudic, Kathleen L and Briscoe, Adriana D},
