--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,17 @@
   publisher={Springer}
 }
 
+@article{hey2002interactions,
+  title={Interactions between natural selection, recombination and gene density in the genes of Drosophila},
+  author={Hey, Jody and Kliman, Richard M},
+  journal={Genetics},
+  volume={160},
+  number={2},
+  pages={595--608},
+  year={2002},
+  publisher={Genetics Soc America}
+}
+
 @article{lewontin1970units,
   title={The units of selection},
   author={Lewontin, Richard C},
