added Wright's maize data

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,59 @@
+@article{majerus2009industrial,
+  title={Industrial melanism in the peppered moth, Biston betularia: an excellent teaching example of Darwinian evolution in action},
+  author={Majerus, Michael EN},
+  journal={Evolution: Education and Outreach},
+  volume={2},
+  number={1},
+  pages={63},
+  year={2009}
+}
+
+@article{kettlewell1955selection,
+  title={Selection experiments on industrial melanism in the Lepidoptera},
+  author={Kettlewell, H Bernard D},
+  journal={Heredity},
+  volume={9},
+  number={3},
+  pages={323},
+  year={1955},
+  publisher={Nature Publishing Group}
+}
+
+@article{cook2012selective,
+  title={Selective bird predation on the peppered moth: the last experiment of Michael Majerus},
+  author={Cook, Laurence M and Grant, Bruce S and Saccheri, Ilik J and Mallet, Jim},
+  journal={Biology Letters},
+  volume={8},
+  number={4},
+  pages={609--612},
+  year={2012},
+  publisher={The Royal Society}
+}
+
+@article{van2011industrial,
+  title={Industrial melanism in British peppered moths has a singular and recent mutational origin},
+  author={van’t Hof, Arjen E and Edmonds, Nicola and Dal{\'\i}kov{\'a}, Martina and Marec, Franti{\v{s}}ek and Saccheri, Ilik J},
+  journal={Science},
+  volume={332},
+  number={6032},
+  pages={958--960},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article {Williams548198,
+	author = {Williams, Kadie-Ann and Pennings, Pleuni S},
+	title = {Drug resistance evolution in HIV in the late 1990s: hard sweeps, soft sweeps, clonal interference and the accumulation of drug resistance mutations},
+	elocation-id = {548198},
+	year = {2019},
+	doi = {10.1101/548198},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2019/02/13/548198},
+	eprint = {https://www.biorxiv.org/content/early/2019/02/13/548198.full.pdf},
+	journal = {bioRxiv}
+}
+
+
 @article{robinson2016revisiting,
   title={Revisiting a Classic Study of the Molecular Clock},
   author={Robinson, Lauren M and Boland, Joseph R and Braverman, John M},
