--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,12 @@
+@Manual{Rstats,
+  title        = {R: A Language and Environment for Statistical Computing},
+  author       = {R},
+  organization = {R Foundation for Statistical Computing},
+  address      = {Vienna, Austria},
+  year         = {2018}
+}
+  %url          = {https://www.R-project.org}  %{R Core Team}
+
 @article{majerus2009industrial,
   title={Industrial melanism in the peppered moth, Biston betularia: an excellent teaching example of Darwinian evolution in action},
   author={Majerus, Michael EN},
@@ -677,7 +686,7 @@
 
 @article{smith1964kin,
   title={Group selection and kin selection},
-  author={{Maynard Smith}, J},
+  author={Maynard Smith, J},
   journal={Nature},
   volume={201},
   number={4924},
