--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -19,7 +19,11 @@
 \usepackage{nicefrac}
 \usepackage{csvsimple}
 %\usepackage[hypertexnames=false]{hyperref}
-\hypersetup{colorlinks=true, urlcolor=black, citecolor=black, linkcolor=black,linkbordercolor=black}
+\hypersetup{  colorlinks=false,% hyperlinks will be black
+  linkbordercolor=red,% hyperlink borders will be red
+  citebordercolor=blue,
+  pdfborderstyle={/S/U/W 1}% border style will be underline of width 1pt
+}  %{colorlinks=true, urlcolor=black, citecolor=black, linkcolor=black,linkbordercolor=black}
 %\usepackage[normalem]{ulem}
 %\usepackage{tcolorbox}
 
@@ -139,12 +143,40 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \par\textit{Updated on \monthyear}
 \end{fullwidth}
 
-
-
 \newpage
+
+\begin{fullwidth}
+~\vfill
+\thispagestyle{empty}
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{\baselineskip}
+%Copyright \copyright\ \the\year\ 
+%Author: \thanklessauthor\\
+  \small This book was developed from my set of notes for the \href{http://www-eve.ucdavis.edu/eve/pbg/}{Population
+  Biology graduate group} core class (PBGG) and Undergraduate Population and
+  Quantitative Genetics class (EVE102) at UC Davis. Thanks to the many
+  students who've read these notes and suggested improvements. Thanks
+ to Simon Aeschbacher, Vince Buffalo, and Erin Calfee who read
+ and edited earlier drafts of these notes. To illustrate these notes I've used old scientific and natural history illustrations, in part
+ because they are out of copyright but mainly because they bring me
+ joy. Many of the old images come from
+ \href{https://www.biodiversitylibrary.org/}{Biodiversity Heritage
+   Library} a consortium of natural history institutions that are
+ digitizing their collections and make them freely available
+ online. If you enjoy the images consider donating to the
+ \href{http://library.si.edu/donate-bhl}{BHL}. Many of the data and
+ simulation graphics in the book were prepared in \citet{Rstats},
+ the code for each is linked to from the caption of each figure. In many cases
+ data was extracted from old figures using the
+ \href{https://automeris.io/WebPlotDigitizer/}{WebPlotDigitizer}
+ tool, as such I advise re-extracting the data if you wish to use it
+ for research purposes. 
+\end{fullwidth}
+
+%\newpage
 \tableofcontents
 
-\newpage
+%\newpage
 \include{Chapters/intro}
 \include{Chapters/chapter-01}
 \include{Chapters/genetic_drift}
