--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -167,7 +167,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
  \href{http://library.si.edu/donate-bhl}{BHL}. Many of the data and
  simulation graphics in the book were prepared in \citet{Rstats},
  the code for each is linked to from the caption of each figure. In many cases
- data was extracted from old figures using the
+ data were extracted from old figures using the
  \href{https://automeris.io/WebPlotDigitizer/}{WebPlotDigitizer}
  tool, as such I advise re-extracting the data if you wish to use it
  for research purposes. 
