--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -152,17 +152,15 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \setlength{\parskip}{\baselineskip}
 %Copyright \copyright\ \the\year\ 
 %Author: \thanklessauthor\\
-  \small This book was developed from my set of notes for the \href{http://www-eve.ucdavis.edu/eve/pbg/}{Population
-  Biology graduate group} core class (PBGG) and Undergraduate Population and
+  \small This book was developed from my set of notes for the [Population Biology graduate group](http://www-eve.ucdavis.edu/eve/pbg/) core class (PBGG) and Undergraduate Population and
   Quantitative Genetics class (EVE102) at UC Davis. Thanks to the many
   students who've read these notes and suggested improvements. Thanks to Simon Aeschbacher, Vince Buffalo, and Erin Calfee who read
  and extensively edited earlier drafts of these notes. To illustrate these notes I've used old scientific and natural history illustrations, in part
  because they are out of copyright but mainly because they bring me joy. Many of the old images come from
-[Biodiversity Heritage
-   Library](https://www.biodiversitylibrary.org/) a consortium of natural history institutions that are
+[Biodiversity Heritage Library](https://www.biodiversitylibrary.org/) a consortium of natural history institutions that are
  digitizing their collections and make them freely available
  online. If you enjoy the images consider donating to the
-(BHL)[http://library.si.edu/donate-bhl]. Many of the data and
+[BHL](http://library.si.edu/donate-bhl). Many of the data and
  simulation graphics in the book were prepared in \citet{Rstats},
  the code for each is linked to from the caption of each figure. In many cases
  data were extracted from old figures using the
