--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,15 @@
+@article{hollister2014recurrent,
+  title={Recurrent loss of sex is associated with accumulation of deleterious mutations in Oenothera},
+  author={Hollister, Jesse D and Greiner, Stephan and Wang, Wei and Wang, Jun and Zhang, Yong and Wong, Gane Ka-Shu and Wright, Stephen I and Johnson, Marc TJ},
+  journal={Molecular biology and evolution},
+  volume={32},
+  number={4},
+  pages={896--905},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+
 @Manual{Rstats,
   title        = {R: A Language and Environment for Statistical Computing},
   author       = {R},
