--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -187,7 +187,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/Genetic_drift_selection}
 %\include{chapter-07}
 \include{Chapters/Linked_selection}
-%\include{Chapters/multi_locus_sel}
+\include{Chapters/multi_locus_sel}
 \bibliography{popgen_notes}
 
 \end{document}
