--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,28 @@
   publisher={Oxford University Press}
 }
 
+@article{hunt2008evolution,
+  title={Evolution toward a new adaptive optimum: phenotypic evolution in a fossil stickleback lineage},
+  author={Hunt, Gene and Bell, Michael A and Travis, Matthew P},
+  journal={Evolution},
+  volume={62},
+  number={3},
+  pages={700--710},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+
+@article{bell2006inferring,
+  title={Inferring natural selection in a fossil threespine stickleback},
+  author={Bell, Michael A and Travis, Matthew P and Blouw, D Max},
+  journal={Paleobiology},
+  volume={32},
+  number={4},
+  pages={562--577},
+  year={2006},
+  publisher={Cambridge University Press}
+}
 
 @Manual{Rstats,
   title        = {R: A Language and Environment for Statistical Computing},
