added animated fitness surfs

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -3,7 +3,11 @@
 %\documentclass[12pt,titlepage]{article}
 \documentclass{tufte-book}
 \usepackage{url}
-%\usepackage[authoryear]{natbib}
+% \usepackage[authoryear]{natbib}
+
+\usepackage{graphicx} 
+\usepackage{animate}  %https://help.geogebra.org/topic/how-to-include-animated-gif-in-latex-pdf
+
 \bibliographystyle{genetics}
 \usepackage{amsfonts}
 \usepackage{amsmath}
