--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -31,6 +31,9 @@
 %\usepackage[normalem]{ulem}
 %\usepackage{tcolorbox}
 
+\usepackage{lineno}  
+
+
 \newcommand{\ec}[1]{{\em \color{blue} #1}}
 
 \newcommand{\gc}[1]{{\color{green} #1}}  %\color{black} #1}}   %
@@ -180,6 +183,9 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %\newpage
 \tableofcontents
 
+\linenumbers
+\modulolinenumbers[2]
+
 %\newpage
 \include{Chapters/intro}
 \include{Chapters/chapter-01}
@@ -191,7 +197,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/Genetic_drift_selection}
 %\include{chapter-07}
 \include{Chapters/Linked_selection}
-\include{Chapters/multi_locus_sel}
+%\include{Chapters/multi_locus_sel}
 \bibliography{popgen_notes}
 
 \end{document}
