extending selection & recom chapter

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,34 @@
+@article{joron2006conserved,
+  title={A conserved supergene locus controls colour pattern diversity in Heliconius butterflies},
+  author={Joron, Mathieu and Papa, Riccardo and Beltr{\'a}n, Margarita and Chamberlain, Nicola and Mav{\'a}rez, Jes{\'u}s and Baxter, Simon and Abanto, Mois{\'e}s and Bermingham, Eldredge and Humphray, Sean J and Rogers, Jane and others},
+  journal={PLoS biology},
+  volume={4},
+  number={10},
+  pages={e303},
+  year={2006},
+  publisher={Public Library of Science}
+}
+
+@book{dobzhansky1970genetics,
+  title={Genetics of the evolutionary process},
+  author={Dobzhansky, Theodosius},
+  volume={139},
+  year={1970},
+  publisher={Columbia University Press}
+}
+
+@article{joron2011chromosomal,
+  title={Chromosomal rearrangements maintain a polymorphic supergene controlling butterfly mimicry},
+  author={Joron, Mathieu and Frezal, Lise and Jones, Robert T and Chamberlain, Nicola L and Lee, Siu F and Haag, Christoph R and Whibley, Annabel and Becuwe, Michel and Baxter, Simon W and Ferguson, Laura and others},
+  journal={Nature},
+  volume={477},
+  number={7363},
+  pages={203},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+
 @article{hollister2014recurrent,
   title={Recurrent loss of sex is associated with accumulation of deleterious mutations in Oenothera},
   author={Hollister, Jesse D and Greiner, Stephan and Wang, Wei and Wang, Jun and Zhang, Yong and Wong, Gane Ka-Shu and Wright, Stephen I and Johnson, Marc TJ},
