--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+@article{bachtrog2014sex,
+  title={Sex determination: why so many ways of doing it?},
+  author={Bachtrog, Doris and Mank, Judith E and Peichel, Catherine L and Kirkpatrick, Mark and Otto, Sarah P and Ashman, Tia-Lynn and Hahn, Matthew W and Kitano, Jun and Mayrose, Itay and Ming, Ray and others},
+  journal={PLoS biology},
+  volume={12},
+  number={7},
+  pages={e1001899},
+  year={2014},
+  publisher={Public Library of Science}
+}
+@article{lowry2010widespread,
+  title={A widespread chromosomal inversion polymorphism contributes to a major life-history transition, local adaptation, and reproductive isolation},
+  author={Lowry, David B and Willis, John H},
+  journal={PLoS biology},
+  volume={8},
+  number={9},
+  pages={e1000500},
+  year={2010},
+  publisher={Public Library of Science}
+}
+
+
 @article{joron2006conserved,
   title={A conserved supergene locus controls colour pattern diversity in Heliconius butterflies},
   author={Joron, Mathieu and Papa, Riccardo and Beltr{\'a}n, Margarita and Chamberlain, Nicola and Mav{\'a}rez, Jes{\'u}s and Baxter, Simon and Abanto, Mois{\'e}s and Bermingham, Eldredge and Humphray, Sean J and Rogers, Jane and others},
