added to fitness landscapes

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,26 @@
   year={2014},
   publisher={Public Library of Science}
 }
+
+@book{stevens1905studies,
+  title={Studies in Spermatogenesis: With especial reference to the" accessory chromosome"},
+  author={Stevens, Nettie Maria},
+  volume={36},
+  year={1905},
+  publisher={Carnegie Institution of Washington}
+}
+
+@article{muller1932some,
+  title={Some genetic aspects of sex},
+  author={Muller, Hermann Joseph},
+  journal={The American Naturalist},
+  volume={66},
+  number={703},
+  pages={118--138},
+  year={1932},
+  publisher={Science Press}
+}
+
 @article{lowry2010widespread,
   title={A widespread chromosomal inversion polymorphism contributes to a major life-history transition, local adaptation, and reproductive isolation},
   author={Lowry, David B and Willis, John H},
