--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+@article{lande1976natural,
+  title={Natural selection and random genetic drift in phenotypic evolution},
+  author={Lande, Russell},
+  journal={Evolution},
+  volume={30},
+  number={2},
+  pages={314--334},
+  year={1976},
+  publisher={Wiley Online Library}
+}
+
+@article{losos2013evolutionary,
+  title={Evolutionary biology for the 21st century},
+  author={Losos, Jonathan B and Arnold, Stevan J and Bejerano, Gill and Brodie III, ED and Hibbett, David and Hoekstra, Hopi E and Mindell, David P and Monteiro, Ant{\'o}nia and Moritz, Craig and Orr, H Allen and others},
+  journal={PLoS Biology},
+  volume={11},
+  number={1},
+  pages={e1001466},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
 @article{bachtrog2014sex,
   title={Sex determination: why so many ways of doing it?},
   author={Bachtrog, Doris and Mank, Judith E and Peichel, Catherine L and Kirkpatrick, Mark and Otto, Sarah P and Ashman, Tia-Lynn and Hahn, Matthew W and Kitano, Jun and Mayrose, Itay and Ming, Ray and others},
