--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,14 @@
   publisher={Wiley Online Library}
 }
 
+@book{simpson1944tempo,
+  title={Tempo and mode in evolution},
+  author={Simpson, George Gaylord},
+  number={15},
+  year={1944},
+  publisher={Columbia University Press}
+}
+
 @article{losos2013evolutionary,
   title={Evolutionary biology for the 21st century},
   author={Losos, Jonathan B and Arnold, Stevan J and Bejerano, Gill and Brodie III, ED and Hibbett, David and Hoekstra, Hopi E and Mindell, David P and Monteiro, Ant{\'o}nia and Moritz, Craig and Orr, H Allen and others},
