--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{karn1951birth,
+  title={Birth weight and gestation time in relation to maternal age, parity and infant survival},
+  author={Karn, Mary N and Penrose, LS},
+  journal={Annals of eugenics},
+  volume={16},
+  number={1},
+  pages={147--164},
+  year={1951},
+  publisher={Wiley Online Library}
+}
+
 @book{simpson1944tempo,
   title={Tempo and mode in evolution},
   author={Simpson, George Gaylord},
