--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{ulizzi1992natural,
+  title={Natural selection associated with birth weight. VI. Towards the end of the stabilizing component},
+  author={Ulizzi, L and Terrenato, L},
+  journal={Annals of human genetics},
+  volume={56},
+  number={2},
+  pages={113--118},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+
 @article{karn1951birth,
   title={Birth weight and gestation time in relation to maternal age, parity and infant survival},
   author={Karn, Mary N and Penrose, LS},
