--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,28 @@
   publisher={Wiley Online Library}
 }
 
+@article{brodie1992correlational,
+  title={Correlational selection for color pattern and antipredator behavior in the garter snake Thamnophis ordinoides},
+  author={Brodie III, Edmund D},
+  journal={Evolution},
+  volume={46},
+  number={5},
+  pages={1284--1298},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+
+@article{smith1993disruptive,
+  title={Disruptive selection and the genetic basis of bill size polymorphism in the African finch Pyrenestes},
+  author={Smith, Thomas Bates},
+  journal={Nature},
+  volume={363},
+  number={6430},
+  pages={618},
+  year={1993},
+  publisher={Nature Publishing Group}
+}
+
 @article{ulizzi1992natural,
   title={Natural selection associated with birth weight. VI. Towards the end of the stabilizing component},
   author={Ulizzi, L and Terrenato, L},
