--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,35 @@
   publisher={Wiley Online Library}
 }
 
+@article{ewens2010gene,
+  title={What is the gene trying to do?},
+  author={Ewens, Warren J},
+  journal={British Journal for the Philosophy of Science},
+  volume={62},
+  number={1},
+  pages={155--176},
+  year={2010},
+  publisher={Oxford University Press}
+}
+
+@book{fisher1930,
+  title={The genetical theory of natural selection: a complete variorum edition},
+  author={Fisher, Ronald Aylmer},
+  year={1930},
+  publisher={Oxford University Press}
+}
+
+@article{weis1990measuring,
+  title={Measuring selection on reaction norms: an exploration of the Eurosta-Solidago system},
+  author={Weis, Arthur E and Gorman, Wendy L},
+  journal={Evolution},
+  volume={44},
+  number={4},
+  pages={820--831},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
 @article{brodie1992correlational,
   title={Correlational selection for color pattern and antipredator behavior in the garter snake Thamnophis ordinoides},
   author={Brodie III, Edmund D},
