--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{bazykin1969hypothetical,
+  title={Hypothetical mechanism of speciation},
+  author={Bazykin, AD},
+  journal={Evolution},
+  volume={23},
+  number={4},
+  pages={685--687},
+  year={1969},
+  publisher={Wiley Online Library}
+}
+
 @article{ewens2010gene,
   title={What is the gene trying to do?},
   author={Ewens, Warren J},
