--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,15 @@
   publisher={Wiley Online Library}
 }
 
+@article{barton1981chromosomal,
+  title={A chromosomal cline in the grasshopper Podisma pedestris},
+  author={Barton, NH and Hewitt, GM},
+  journal={Evolution},
+  pages={1008--1018},
+  year={1981},
+  publisher={JSTOR}
+}
+
 @article{bazykin1969hypothetical,
   title={Hypothetical mechanism of speciation},
   author={Bazykin, AD},
