--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -156,7 +156,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %Copyright \copyright\ \the\year\ 
 %Author: \thanklessauthor\\
   \small This book was developed from my set of notes for the \href{http://www-eve.ucdavis.edu/eve/pbg/}{Population
-  Biology graduate group} core class (PBGG) and Undergraduate Population and
+  Biology graduate group} core class (PBG200A) and Undergraduate Population and
   Quantitative Genetics class (EVE102) at UC Davis. Thanks to the many
   students who've read these notes and suggested improvements. Thanks
  to Simon Aeschbacher, Vince Buffalo, and Erin Calfee who read
