--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,92 @@
   publisher={Wiley Online Library}
 }
 
+@article{gillespie1977natural,
+  title={Natural selection for variances in offspring numbers: a new evolutionary principle},
+  author={Gillespie, John H},
+  journal={The American Naturalist},
+  volume={111},
+  number={981},
+  pages={1010--1014},
+  year={1977},
+  publisher={University of Chicago Press}
+}
+
+@article{gillespie1973natural,
+  title={Natural selection with varying selection coefficients--a haploid model},
+  author={Gillespie, John H},
+  journal={Genetics Research},
+  volume={21},
+  number={2},
+  pages={115--120},
+  year={1973},
+  publisher={Cambridge University Press}
+}
+
+
+@article{basolo1994dynamics,
+  title={The dynamics of Fisherian sex-ratio evolution: theoretical and experimental investigations},
+  author={Basolo, Alexandra L},
+  journal={The American Naturalist},
+  volume={144},
+  number={3},
+  pages={473--490},
+  year={1994},
+  publisher={University of Chicago Press}
+}
+
+@book{smith1982evolution,
+  title={Evolution and the Theory of Games},
+  author={Smith, John Maynard},
+  year={1982},
+  publisher={Cambridge university press}
+}
+
+
+
+
+@article{cohen1966optimizing,
+  title={Optimizing reproduction in a randomly varying environment},
+  author={Cohen, Dan},
+  journal={Journal of theoretical biology},
+  volume={12},
+  number={1},
+  pages={119--129},
+  year={1966},
+  publisher={Elsevier}
+}
+
+@article{stumpf2002herpes,
+  title={Herpes viruses hedge their bets},
+  author={Stumpf, Michael PH and Laidlaw, Zo{\"e} and Jansen, Vincent AA},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={23},
+  pages={15234--15237},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
+@InBook{seger1987oxford,
+  author = 	 {Seger, J and Brockmann, HJ},
+  editor = 	 {Harvey, PH and Partridge, L},
+  title = 	 {Oxford Surveys in Evolutionary Biology},
+  chapter = 	 {What is bet-hedging},
+  publisher = 	 {Oxford University Press},
+  year = 	 {1987},
+  OPTkey = 	 {},
+  volume = 	 {4},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  pages = 	 {182--211},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 @article{barton1981chromosomal,
   title={A chromosomal cline in the grasshopper Podisma pedestris},
   author={Barton, NH and Hewitt, GM},
