added sex ratio distortion R code

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -31,6 +31,39 @@
   publisher={Cambridge University Press}
 }
 
+@article{ferree2007distorted,
+  title={Distorted sex ratios: a window into RNAi-mediated silencing},
+  author={Ferree, Patrick M and Barbash, Daniel A},
+  journal={PLoS biology},
+  volume={5},
+  number={11},
+  pages={e303},
+  year={2007},
+  publisher={Public Library of Science}
+}
+
+
+@article{tao2007sexII,
+  title={A sex-ratio meiotic drive system in Drosophila simulans. II: an X-linked distorter},
+  author={Tao, Yun and Araripe, Luciana and Kingan, Sarah B and Ke, Yeyan and Xiao, Hailian and Hartl, Daniel L},
+  journal={PLoS biology},
+  volume={5},
+  number={11},
+  pages={e293},
+  year={2007},
+  publisher={Public Library of Science}
+}
+
+@article{tao2007sex,
+  title={A sex-ratio meiotic drive system in Drosophila simulans. I: an autosomal suppressor},
+  author={Tao, Yun and Masly, John P and Araripe, Luciana and Ke, Yeyan and Hartl, Daniel L},
+  journal={PLoS biology},
+  volume={5},
+  number={11},
+  pages={e292},
+  year={2007},
+  publisher={Public Library of Science}
+}
 
 @article{basolo1994dynamics,
   title={The dynamics of Fisherian sex-ratio evolution: theoretical and experimental investigations},
