added fig wasps

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -31,6 +31,20 @@
   publisher={Cambridge University Press}
 }
 
+
+
+
+@article{edwards1961population,
+  title={The population genetics of “sex-ratio” in Drosophila pseudoobscura},
+  author={Edwards, AWF},
+  journal={Heredity},
+  volume={16},
+  number={3},
+  pages={291},
+  year={1961},
+  publisher={Nature Publishing Group}
+}
+
 @article{ferree2007distorted,
   title={Distorted sex ratios: a window into RNAi-mediated silencing},
   author={Ferree, Patrick M and Barbash, Daniel A},
@@ -52,6 +66,17 @@
   pages={e293},
   year={2007},
   publisher={Public Library of Science}
+}
+
+@article{lin2018hprna,
+  title={The hpRNA/RNAi pathway is essential to resolve intragenomic conflict in the Drosophila male germline},
+  author={Lin, Ching-Jung and Hu, Fuqu and Dubruille, Raphaelle and Vedanayagam, Jeffrey and Wen, Jiayu and Smibert, Peter and Loppin, Benjamin and Lai, Eric C},
+  journal={Developmental cell},
+  volume={46},
+  number={3},
+  pages={316--326},
+  year={2018},
+  publisher={Elsevier}
 }
 
 @article{tao2007sex,
@@ -84,7 +109,16 @@
 }
 
 
-
+@article{gremer2014bet,
+  title={Bet hedging in desert winter annual plants: optimal germination strategies in a variable environment},
+  author={Gremer, Jennifer R and Venable, D Lawrence},
+  journal={Ecology Letters},
+  volume={17},
+  number={3},
+  pages={380--387},
+  year={2014},
+  publisher={Wiley Online Library}
+}
 
 @article{cohen1966optimizing,
   title={Optimizing reproduction in a randomly varying environment},
