--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -190,6 +190,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/Pheno_var}
 \include{Chapters/Response_to_sel}
 \include{Chapters/One_locus_selection}
+\include{Chapters/Interaction_selection_mut_mig}
 \include{Chapters/Genetic_drift_selection}
 %\include{chapter-07}
 \include{Chapters/Linked_selection}
