added fille du roi

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -68,6 +68,28 @@
   publisher={Public Library of Science}
 }
 
+@article{milot2017mother,
+  title={Mother’s curse neutralizes natural selection against a human genetic disease over three centuries},
+  author={Milot, Emmanuel and Moreau, Claudia and Gagnon, Alain and Cohen, Alan A and Brais, Bernard and Labuda, Damian},
+  journal={Nature ecology \& evolution},
+  volume={1},
+  number={9},
+  pages={1400},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{laberge2005fille,
+  title={A “Fille du Roy” introduced the T14484C Leber hereditary optic neuropathy mutation in French Canadians},
+  author={Laberge, Anne-Marie and Jomphe, Mich{\`e}le and Houde, Louis and V{\'e}zina, H{\'e}l{\`e}ne and Tremblay, Marc and Desjardins, Bertrand and Labuda, Damian and St-Hilaire, Marc and Macmillan, Carol and Shoubridge, Eric A and others},
+  journal={The American Journal of Human Genetics},
+  volume={77},
+  number={2},
+  pages={313--317},
+  year={2005},
+  publisher={Elsevier}
+}
+
 @article{lin2018hprna,
   title={The hpRNA/RNAi pathway is essential to resolve intragenomic conflict in the Drosophila male germline},
   author={Lin, Ching-Jung and Hu, Fuqu and Dubruille, Raphaelle and Vedanayagam, Jeffrey and Wen, Jiayu and Smibert, Peter and Loppin, Benjamin and Lai, Eric C},
