added Bladder Campion

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -68,6 +68,17 @@
   publisher={Public Library of Science}
 }
 
+@article{charlesworth1998male,
+  title={The male-sterility polymorphism of Silene vulgaris: analysis of genetic data from two populations and comparison with Thymus vulgaris},
+  author={Charlesworth, D and Laporte, Val{\'e}rie},
+  journal={Genetics},
+  volume={150},
+  number={3},
+  pages={1267--1282},
+  year={1998},
+  publisher={Genetics Soc America}
+}
+
 @article{milot2017mother,
   title={Mother’s curse neutralizes natural selection against a human genetic disease over three centuries},
   author={Milot, Emmanuel and Moreau, Claudia and Gagnon, Alain and Cohen, Alan A and Brais, Bernard and Labuda, Damian},
