--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -215,6 +215,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{edwards1998natural,
+  title={Natural selection and the sex ratio: Fisher's sources},
+  author={Edwards, Anthony WF},
+  journal={The American Naturalist},
+  volume={151},
+  number={6},
+  pages={564--569},
+  year={1998},
+  publisher={The University of Chicago Press}
+}
+
 @article{ewens2010gene,
   title={What is the gene trying to do?},
   author={Ewens, Warren J},
