--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,14 @@
   publisher={Wiley Online Library}
 }
 
+@book{wright1932,
+  title={The roles of mutation, inbreeding, crossbreeding, and selection in evolution},
+  author={Wright, Sewall},
+  volume={1},
+  year={1932},
+  publisher={na}
+}
+
 @article{gillespie1977natural,
   title={Natural selection for variances in offspring numbers: a new evolutionary principle},
   author={Gillespie, John H},
