adding math background

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+@article{haldane1964defense,
+  title={A defense of beanbag genetics},
+  author={Haldane, John Burdon Sanderson},
+  journal={Perspectives in Biology and Medicine},
+  volume={7},
+  number={3},
+  pages={343--360},
+  year={1964},
+  publisher={Johns Hopkins University Press}
+}
+
+@article{grant2002unpredictable,
+  title={Unpredictable evolution in a 30-year study of Darwin's finches},
+  author={Grant, Peter R and Grant, B Rosemary},
+  journal={science},
+  volume={296},
+  number={5568},
+  pages={707--711},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{lande1976natural,
   title={Natural selection and random genetic drift in phenotypic evolution},
   author={Lande, Russell},
