--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -195,6 +195,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %\include{chapter-07}
 \include{Chapters/Linked_selection}
 \include{Chapters/multi_locus_sel}
+\include{math_background/Math-background}
 \bibliography{popgen_notes}
 
 \end{document}
